--- a/mydashboard/templates/dashboard/index.html
+++ b/mydashboard/templates/dashboard/index.html
@@ -3,7 +3,7 @@
 <section class="h-100 ">
 	<article class="h-100 p-3 container">
 		<h2 class="mt-3 pl-3">
-	        Tableau De Bord
+	        Tableau De Bord pour le mois : {{date}}
 	    </h2>
 		<div class="h-100 row">
 			<div id='graph' class="h-100 graph col-9 text-center "></div>
@@ -22,18 +22,17 @@
 	</article>
 </section>
 {% load static %}
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script type="text/javascript" src='{% static "mydashboard/js/graph.js" %}'> </script>
 <script type="text/javascript">
 	const container = 'graph';
-	// const datas = {
-	// 	'contacted' :{{datas.cont}},
-	// 	'to contact' : {{datas.toCont}},
-	// 	'date' : {{datas.date|safe}},
-	// };
-	// CreateChart(container, datas);
-	CreateChart(container);
+	const datas = {
+		'col1' :{{list_contacted}},
+		'col2' : {{list_to_contact}}
+	};
+	console.log(datas)
+	CreateChart(container, datas);
+
 
 	const owner = function(){
 		//this function sends user to sheet/index.html
