us20: dev does all tests, no dj-nose added, collectstatic

--- a/core/static/css/change.css
+++ b/core/static/css/change.css
@@ -90,6 +90,10 @@ h2{
 		overflow-y: scroll;
 		max-height: 25rem; 
 	}
+	.max-scrolable-y{
+		overflow-y: scroll;
+		max-height: 33rem; 
+	}
 	.right-part{
 		width:  80%;	
 	}
