--- a/info/templates/info/legal_notice.html
+++ b/info/templates/info/legal_notice.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 {% block content %}
-<section class="section-scrolable">
+<section class="max-scrolable-y">
 	<article>
 		<h1>Contexte</h1>
 		<p class="alinea">Ce projet a été créé pour répondre aux exigence du <strong>projet 13</strong> de la formation <a href="https://openclassrooms.com/fr/paths/68-developpeur-dapplication-python">Openclassroom parcours Python</a>. Il s'agit de <strong>mettre en oeuvre toutes mes compétences pour répondre aux besoins d'une association </strong>que je souhaite aider. Dans mon cas <a href="https://www.spa24bergerac.org/">le centre spa</a> de ma ville</p>
