--- a/sheet/templates/sheet/add.html
+++ b/sheet/templates/sheet/add.html
@@ -63,9 +63,10 @@
 								<div class="col-12">{{form.status}}</div>
 							</div>
 						</div>
-						<div class="row part-add">
-							<h4 class="mt-3 mb-2 pl-5">Propriétaire</h4>
-							<div class="col-12 d-flex pt-5">
+						<div class=" part-add">
+							<h4 class="mt-3 pl-5">Propriétaire</h4>
+							<p class="pl-5" id="hint"></p>
+							<div class="col-12 d-flex pt-1">
 								<div class="col-9 d-flex very-center curs-pointer  ">
 									{{form.select_owner}} <p class=" pt-3 ml-5"><img class="icon-link" src="{% static 'img/eye.png'%}" onclick="GotoOwner()" alt="eye"></p>
 								</div>
@@ -74,7 +75,6 @@
 									<input id="save" type="submit" class="btn btn-primary big-btn" value="Enregistrer"> 
 								</div>
 							</div>
-							<p id="hint"></p>
 						</div>
 					</div>
 				</div>
@@ -112,6 +112,29 @@
         	document.getElementById("id_caution").value = 200
         }
     }
+    window.onbeforeunload = function() {
+    	for (v of variables){
+    		localStorage.setItem(v, $('#id_'+v).val());
+    	}
+    	for (elem of ["is_neutered_0", "is_neutered_1", "is_neutered_2"]){
+			if ($('#id_'+elem).is(':checked')){
+				localStorage.setItem("is_neutered", $('#id_'+elem).val())
+			}
+    	}
+    	
+    }
+    window.onload = function() {
+    	document.getElementById('hint').innerHTML="Appuyer sur F5 après tout changement"
+    	for (v of variables){
+    		if (v == "is_neutered"){
+		    	$('#id_is_neutered_'+localStorage.getItem(v)).prop( "checked", true);
+		    	appearNewDateInput(localStorage.getItem(v))
+	    	}
+	    	if (localStorage.getItem(v) !== null) $('#id_'+v).val(localStorage.getItem(v));
+    	}
+	    // var color = ;
+	    // if (name !== null) $('#id_color').val(color);
+	}
 	const GotoOwner = function(){
 		//this function gathers the value of select and open a new window according to this id_value"""
 		select_val = document.getElementById('id_select_owner').value
@@ -131,13 +154,11 @@
 
 		}
 		{% endfor %}
-		document.getElementById('hint').innerHTML="Appuyer sur F5 après toutes sortes de changements"
 		console.log(wanted_width, wanted_height)
 		let spec =  "toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=200,width="
 		spec += wanted_width+",height="+wanted_height
 		window.open(url_open, "_blank", spec);
-		confirm("On continue ?")
-		window.location.href = window.location.href
+
 	}
 
 	//*** auto fill with today date 
@@ -156,17 +177,20 @@
 		is_neuter = document.getElementById('id_is_neutered_0')
 		willBe = document.getElementById('id_is_neutered_2')
 		if (nb == "0"){
+			document.getElementById('id_is_neutered').value = "0"
 			is_neuter.checked = true
-			is_neuter.parentNode.innerHTML = '<input id="id_is_neutered_0" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" checked> stérilisé le {{form.date_of_neuter}}.</input>'
+			is_neuter.parentNode.innerHTML = '<input id="id_is_neutered_0" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="0" checked> stérilisé le {{form.date_of_neuter}}.</input>'
 			willBe.parentNode.innerHTML = '<input id="id_is_neutered_2" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" > sera stérilisable </input>'
 			return true
 		}
 		else if (nb == "2"){
+			document.getElementById('id_is_neutered').value = "2"
 			willBe.checked = true
 			willBe.parentNode.innerHTML = '<input id="id_is_neutered_2" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="2" checked> sera stérilisable le {{form.futur_date_of_neuter}}.</input>'
 			is_neuter.parentNode.innerHTML = '<input id="id_is_neutered_0" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="0">stéril</input>'
 			return true
 		}else{
+			document.getElementById('id_is_neutered').value = "1"
 			is_neuter.checked = false
 			willBe.checked = false
 			is_neuter.parentNode.innerHTML = '<input id="id_is_neutered_0" class="lst-none pl-0 mb-0" type="radio" name="is_neutered" value="0">stéril</input>'
@@ -196,6 +220,7 @@
 			return
 		}else{
 			appearNewDateInput("0")
+			$('#id_date_of_neuter').val(localStorage.getItem("date_of_neuter"))
 		}
 	}
 	document.getElementById('id_is_neutered_1').parentNode.onclick = function(){
@@ -207,6 +232,7 @@
 			return
 		}else{
 			appearNewDateInput("2")
+			$('#id_futur_date_of_neuter').val(localStorage.getItem("futur_date_of_neuter"))
 		}
 	}
 	const main = function(){
