us22 : Adapt app to server deployment 2, add selenium in progress

--- a/spa_core/templates/core/nav.html
+++ b/spa_core/templates/core/nav.html
@@ -3,7 +3,7 @@
 	<div class="container d-flex mt-2 mb-2 ">
 		{%load static%}
 		<div class="row">
-			<div class="col-12 text-center photo"><img src="{% static 'img/avatar.png'%}" alt=""></div>
+			<div class="col-12 text-center photo"><img src="{% static 'spa_core/img/avatar.png'%}" alt=""></div>
 			{% if name%}
 			<div class="col-12 text-center label-photo">Bienvenu {{name}}</div>
 			{% endif%}
