--- a/spa_core/templates/core/search.html
+++ b/spa_core/templates/core/search.html
@@ -19,13 +19,13 @@
       <div id="button_row"class="row">
         <div class="col-1"></div>
         <div class="col-3">
-          <p class="text-blue curs-pointer hover-under" id="prop:" onclick=AddTag(this.id)>#Propriétaire</p>
+          <p class="text-blue text-center curs-pointer hover-under" id="prop:" onclick=AddTag(this.id)>#Propriétaire</p>
         </div>
         <div class="col-3">
-          <p class="text-blue curs-pointer hover-under" id="anim:" onclick=AddTag(this.id)>#Animal</p>
+          <p class="text-blue text-center curs-pointer hover-under" id="anim:" onclick=AddTag(this.id)>#Animal</p>
         </div>
         <div class="col-3">
-          <p class="text-blue curs-pointer hover-under" id="puce:" onclick=AddTag(this.id)>#Puce</p>
+          <p class="text-blue text-center curs-pointer hover-under" id="puce:" onclick=AddTag(this.id)>#Puce</p>
         </div>
         <div class="col-2"></div>
       </div>
