--- a/sheet/templates/sheet/add_owner_open.html
+++ b/sheet/templates/sheet/add_owner_open.html
@@ -9,9 +9,9 @@
 
   <title>SPA suivi stérilisation</title>
   {% load static %}
-	<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet" type="text/css" >
-	<link rel="stylesheet" href="{% static 'css/change.css'%}">
-	<link rel="icon" href="{% static 'img/favicon.png'%}">
+	<link href="{% static 'spa_core/css/bootstrap.min.css'%}" rel="stylesheet" type="text/css" >
+	<link rel="stylesheet" href="{% static 'spa_core/css/change.css'%}">
+	<link rel="icon" href="{% static 'spa_core/img/favicon.png'%}">
 </head>
 <body>
 	
@@ -54,7 +54,7 @@
 </section>
 
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-<script type="text/javascript" src='{% static "sheet/js/utils.js" %}'> </script>
+<script type="text/javascript" src='{% static "spa_core/sheet/js/utils.js" %}'> </script>
 <script type="text/javascript">
 	/* *** plan ***
 	1/ User select new or former owner
