sass for nav, right-top, dashboard, sheet-index anim side

--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'spa_core/base.html' %}
 {% block content %}
 <section>
 	<h2 class="mt-5 pl-5">Page Information</h2>
