--- a/mail/templates/mail/cns.html
+++ b/mail/templates/mail/cns.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %} 
+{% extends 'spa_core/base.html' %} 
 {% block content %}
 <section>
 	<p class="curs-pointer back-button" onclick=BackToIndex()>Retour Index</p>
