--- a/mail/templates/mail/content.html
+++ b/mail/templates/mail/content.html
@@ -2,7 +2,7 @@
     - AJAX for overview, 
     - JS for input checking -->
 
-{% extends 'core/base.html' %}
+{% extends 'spa_core/base.html' %} 
 {% block content %}
 <section class="">
     <p class="curs-pointer back-button" onclick=BackToCNS()()>Retour CNS</p>
