--- a/mail/templates/mail/settings.html
+++ b/mail/templates/mail/settings.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'spa_core/base.html' %} 
 {% block content %}
 <section class="">
     <p class="curs-pointer back-button" onclick=BackToCNS()>Retour CNS</p>
