--- a/info/templates/info/legal_notice.html
+++ b/info/templates/info/legal_notice.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'spa_core/base.html' %}
 {% block content %}
 <section class="max-scrolable-y">
 	<article>
