--- a/mydashboard/templates/dashboard/index.html
+++ b/mydashboard/templates/dashboard/index.html
@@ -1,24 +1,19 @@
-{% extends 'core/base.html' %}
+{% extends 'spa_core/base.html' %} 
 {% block content %}
-<section class="h-100 ">
-	<article class="h-100 p-3 container">
-		<h2 class="mt-3 pl-3">
-	        Tableau De Bord pour le mois : {{date}}
-	    </h2>
-		<div class="h-100 row">
-			<div id='graph' class="h-100 graph col-9 text-center "></div>
-			<div class="col-3 container-dash-3-buttons bg-blue-trans">
-				<div class=" h-100 p-2 dash-3-buttons">
-					<div onclick=owner()  class="mt-3  d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) devant stériliser">Propriétaires <br> avec obligations : {{nb_owners}}</div>
-					<div onclick=contacted() class="mt-3  d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) à contacter"> Propriétaires <br> à contacter : {{nb_to_contact}} </div>
-					<div onclick=to_contact() class="mt-3  d-flex align-items-center justify-content-center curs-pointer" title="propriétaire(s) contacté(s)">Propriétaires <br> contactés : {{nb_contacted}}</div>
-				</div>
+<section class="sec-dashboard">
+	<article class="art-dashboard">
+		<h2 class="">
+			Tableau De Bord pour le mois : {{date}}
+		</h2>
+		<div class="container-dashboard">
+			<div id='graph' class="graph"></div>
+			<div class="container-button">
+					<div onclick=owner()  class="" title="propriétaire(s) devant stériliser">Propriétaires <br> avec obligations : {{nb_owners}}</div>
+					<div onclick=contacted() class="" title="propriétaire(s) à contacter"> Propriétaires <br> à contacter : {{nb_to_contact}} </div>
+					<div onclick=to_contact() class="" title="propriétaire(s) contacté(s)">Propriétaires <br> contactés : {{nb_contacted}}
+					</div>
 			</div>
 		</div>
-		<p>
-
-		</p>
-
 	</article>
 </section>
 {% load static %}
