--- a/sheet/templates/sheet/add.html
+++ b/sheet/templates/sheet/add.html
@@ -2,85 +2,34 @@
 {% block content %}
 {% load static%}
 <section>
-	<h2 class="mt-3 mb-4 pl-5">Page Ajout Fiche</h2>
+	<h2 class="">Page Ajout Fiche</h2>
 	<article class="">
-		<form id="my_form" class="sheet" action="" method="post" enctype="multipart/form-data">
+		<form id="my_form" class="sheet container-full-form" action="" method="post" enctype="multipart/form-data">
 			{% csrf_token %}
-			<div class="container border-white">
-				<div class="row">
-					<div class="col-5 container">
-						<div class="row part-add">
-							<h4 class="mt-3 mb-4 pl-5">Animal</h4>
-							<div class="col-12 d-flex">
-								<div class="col-6">
-									<p>{{form.name.label}} : {{form.name}}</p>
-								</div>
-								<div class="col-6">
-									<p>{{form.color.label}} : {{form.color}}</p>
-								</div>
-							</div>
-							<div class="col-12 d-flex">
-								<div class="col-6">
-									<p>Espèce :<br> {{form.species}}</p>
-								</div>
-								<div class="col-6">
-									<p>Race : {{form.race}}</p>
-								</div>
-							</div>
-							<div class="col-12">
-								<hr align=center size=4 width="50%" class="add-hr"/>
-							</div>
-							<div class="col-6">
-								<p class="text-center">Date de naissance : {{form.date_of_birth}}</p>
-							</div>
-							<div class="col-6">
-								<p class="text-center">Date d'adoption : {{form.date_of_adoption}}</p>
-							</div>
-							<div class="col-12">
-								<hr align=center size=4 width="50%" class="add-hr"/>
-							</div>
-							<div class="col-6">
-								<p class="text-center">Caution : {{form.caution}}</p>
-							</div>
-							<div class="col-6">
-								<p class="text-center">Nature : {{form.nature_caution}}</p>
-							</div>
+			<div class="container-form-left-part">
+				{% include "./part_form/anim_part.html"%}
+			</div>
+			<div class="container-form-right-part">
+				<div class="container-form-right-part-top">
+					
+				</div>
+				<div class=" container-form-right-part-bottom">
+					<h4 class="mt-3 pl-5">Propriétaire</h4>
+					<p class="pl-5" id="hint"></p>
+					<div class="col-12 d-flex pt-1">
+						<div  class="col-9 d-flex very-center curs-pointer  ">
+							{{form.select_owner}} <p class=" pt-3 ml-5"><img id="eye" class="icon-link" src="{% static 'spa_core/img/eye.png'%}" onclick="GotoOwner()" alt="eye"></p>
 						</div>
-					</div>
-					<div class="col-7 container">
-						<div class="row part-add">
-							<h4 class="mt-3 mb-4 pl-5">Admin</h4>
-							<div class="col-12 d-flex">
-								<div class="col-4">Dossier : {{form.file}}</div>
-								<div class="col-4">Puce : {{form.chip}}</div>
-								<div class="col-4">Tatouage : {{form.tatoo}}</div>
-							</div>
-							<div class="col-12">
-								<hr align=center size=4 width="50%" class="add-hr"/>
-							</div>
-							<div class="col-12">
-								<div class="col-12 pl-0">{{form.is_neutered}}</div>
-								<div class="col-12">{{form.status}}</div>
-							</div>
-						</div>
-						<div class=" part-add">
-							<h4 class="mt-3 pl-5">Propriétaire</h4>
-							<p class="pl-5" id="hint"></p>
-							<div class="col-12 d-flex pt-1">
-								<div  class="col-9 d-flex very-center curs-pointer  ">
-									{{form.select_owner}} <p class=" pt-3 ml-5"><img id="eye" class="icon-link" src="{% static 'spa_core/img/eye.png'%}" onclick="GotoOwner()" alt="eye"></p>
-								</div>
 
-								<div class="col-3 d-flex very-center curs-pointer" >
-									<input id="save" type="submit" class="btn btn-primary big-btn" value="Enregistrer"> 
-								</div>
-							</div>
+						<div class="col-3 d-flex very-center curs-pointer" >
+							<input id="save" type="submit" class="btn btn-primary big-btn" value="Enregistrer"> 
 						</div>
 					</div>
 				</div>
 			</div>
-		</form>
-	</article>
+		</div>
+	</form>
+</article>
 </section>
 
 <script type="text/javascript">
@@ -102,41 +51,41 @@
 	let divNew = document.getElementsByClassName("new-owner")[0] //div for button Nouveau Propériétaire
 
 	let is_chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
-         
-    const clickSelectedOption = function(select) {
-        if(!is_chrome) return;
-        select.options[select.selectedIndex].click();
-        if (select.selectedIndex == "0" || select.selectedIndex == "1") {
-        	document.getElementById("id_caution").value = 100
-        }else{
-        	document.getElementById("id_caution").value = 200
-        }
-    }
-    $('#my_form').submit(function() {
-    	localStorage.clear()
+
+	const clickSelectedOption = function(select) {
+		if(!is_chrome) return;
+		select.options[select.selectedIndex].click();
+		if (select.selectedIndex == "0" || select.selectedIndex == "1") {
+			document.getElementById("id_caution").value = 100
+		}else{
+			document.getElementById("id_caution").value = 200
+		}
+	}
+	$('#my_form').submit(function() {
+		localStorage.clear()
 		return true; // return false to cancel form action
 	});
-		window.onbeforeunload = function() {
-    	for (v of variables){
-    		localStorage.setItem(v, $('#id_'+v).val());
-    	}
-    	for (elem of ["is_neutered_0", "is_neutered_1", "is_neutered_2"]){
+	window.onbeforeunload = function() {
+		for (v of variables){
+			localStorage.setItem(v, $('#id_'+v).val());
+		}
+		for (elem of ["is_neutered_0", "is_neutered_1", "is_neutered_2"]){
 			if ($('#id_'+elem).is(':checked')){
 				localStorage.setItem("is_neutered", $('#id_'+elem).val())
 			}
-    	}
-    	
-    }
+		}
 
-    window.onload = function() {
-    	document.getElementById('hint').innerHTML="Appuyer sur F5 après tout changement"
-    	for (v of variables){
-    		if (v == "is_neutered"){
-		    	$('#id_is_neutered_'+localStorage.getItem(v)).prop( "checked", true);
-		    	appearNewDateInput(localStorage.getItem(v))
-	    	}
-	    	if (localStorage.getItem(v) !== null) $('#id_'+v).val(localStorage.getItem(v));
-    	}
+	}
+
+	window.onload = function() {
+		document.getElementById('hint').innerHTML="Appuyer sur F5 après tout changement"
+		for (v of variables){
+			if (v == "is_neutered"){
+				$('#id_is_neutered_'+localStorage.getItem(v)).prop( "checked", true);
+				appearNewDateInput(localStorage.getItem(v))
+			}
+			if (localStorage.getItem(v) !== null) $('#id_'+v).val(localStorage.getItem(v));
+		}
 	}
 	const GotoOwner = function(){
 		//this function gathers the value of select and open a new window according to this id_value"""
